# ITKContourInterpolation

./: .gitignore  CMakeLists.txt  ITKKWStyleOverwrite.txt  README.md  README.rst  appveyor.yml  circle.yml  environment.yml  itk-module.cmake  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  uncrustify_itk.cfg
.circleci/: config.yml
.github/workflows/: build-test-package.yml  clang-format-linter.yml  documentation.yml  wasm.yml
doc/: CTestCostDataConvLinux.txt  CTestCostDataConvWindows.txt  CTestCostDataImageLinux.txt  CTestCostDataImageWindows.txt  CTestCostDataRLELinux.txt  CTestCostDataRLEWindows.txt  InsightJournal.bib  Makefile  MorphologicalContourInterpolation.tex  Performance.ods  c10l.csv  c2l.csv  case_10_labels.csv  case_2_labels.csv  diff.label  diffA.nrrd  diffX.nrrd  diffY.nrrd  diffZ.nrrd  dscComparison.ods
example/: CMakeLists.txt  mciExample.cxx
examples/: CMakeLists.txt  ManyToMany.nrrd  SevenLabels.nrrd  mciExample.cxx  mciExample.py
include/: ThreadPool.h  itkMorphologicalContourInterpolator.h  itkMorphologicalContourInterpolator.hxx
test/: CMakeLists.txt  dscComparison.cxx  itkMorphologicalContourInterpolationTest.cxx  itkMorphologicalContourInterpolationTestWithRLEImage.cxx  manualTest.cxx
test/Docker/: Dockerfile  build.sh  run.sh  test.sh
wasm/: CMakeLists.txt  morphological-contour-interpolation.cxx
wasm/python/itkwasm-morphological-contour-interpolation-wasi/: README.md  pyproject.toml
wasm/python/itkwasm-morphological-contour-interpolation-wasi/test/: test_morphological_contour_interpolation.py
wasm/typescript/: README.md  package.json
wasm/typescript/test/node/: common.js  morphological-contour-interpolation-test.js
