[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "itkwasm-morphological-contour-interpolation-wasi"
readme = "README.md"
license = "Apache-2.0"
dynamic = ["version"]
description = "Morphology-based approach for interslice interpolation of anatomical slices from volumetric images."
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: C++",
  "Environment :: WebAssembly",
  "Environment :: WebAssembly :: Emscripten",
  "Environment :: WebAssembly :: WASI",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = [
  "itkwasm",
  "webassembly",
  "wasi",
]

requires-python = ">=3.8"
dependencies = [
    "itkwasm >= 1.0.b145",
    "importlib_resources",
]

[tool.hatch.version]
path = "itkwasm_morphological_contour_interpolation_wasi/_version.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "itkwasm-image-io",
]

[project.urls]
Home = "https://github.com/KitwareMedical/ITKMorphologicalContourInterpolation"
Source = "https://github.com/KitwareMedical/ITKMorphologicalContourInterpolation"

[tool.hatch.envs.default.scripts]
test = "pytest"


[tool.hatch.build]
exclude = [
  "/examples",
]
